@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*samplv1-0.4.0 (08 Mar 2014)
+
+  08 Mar 2014; Matt Henley (nwmatt) <nwmatt@gmail.com>
+  +samplv1-0.4.0.ebuild:
+  Version bump.
+
 *samplv1-0.3.6 (01 Jan 2014)
 
   01 Jan 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
